# text-to-sql

./: .gitignore  .gitmodules  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: api.py  demo.py  errors.py  model.py  schemas_loader.py
data/eval/: golden_eval.jsonl
data/eval/results/: baseline_gpt-4o_20260504_114044.jsonl  baseline_llama-3.3-70b-versatile_20260504_142328.jsonl  baseline_llama-3.3-70b-versatile_20260504_142927.jsonl  baseline_qwen-qwq-32b_20260504_142927.jsonl  baseline_qwen25_7b_20260505_052633.jsonl  baseline_summary_20260504_114044.json  baseline_summary_20260504_142328.json  baseline_summary_20260504_142927.json  baseline_summary_20260505_052633.json  finetuned_qwen25_7b_20260505_132721.jsonl
data/processed/: dataset_summary.json  failure_analysis.json  layer2_synthetic.jsonl  layer3_hard_negatives.jsonl  layer4_style_aligned.jsonl  spider_filtered.jsonl  train.jsonl  val.jsonl
data/raw/schemas/: index.json  insurance_v1.json  investment_v1.json  lending_v1.json  logistics_v1.json  marketplace_v1.json  (+5 more)
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
notebooks/: day10_post_training_eval.py  day12_retrain.py  day5_baseline_eval.py  day6_qlora_smoke_test.py  install.py  upload_adapter_to_hub.py
scripts/: analyze_failures.py  build_dataset.py  build_eval_set.py  download_and_filter.py  generate_hard_negatives.py  generate_schemas.py  generate_style_aligned.py  generate_synthetic.py  push_adapter_to_hub.py  run_baseline_eval.py
src/data/: prompt_template.py
