[project]
name = "text-to-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "anthropic>=0.52.0",
    "datasets>=3.5.0",
    "duckdb>=1.2.2",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.0",
    "huggingface-hub>=0.30.2",
    "langfuse>=3.14.0",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.33.1",
    "sentencepiece>=0.2.0",
    "sqlparse>=0.5.3",
    "tokenizers>=0.21.1",
    "tqdm>=4.67.0",
    "transformers>=4.51.0",
    "uvicorn[standard]>=0.34.0",
    "wandb>=0.19.11",
]
